# autogen-toolsmith

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
autogen_toolsmith/: __init__.py
autogen_toolsmith/cli/: commands.py
autogen_toolsmith/generator/: __init__.py  code_generator.py  code_validator.py  prompt_templates.py
autogen_toolsmith/storage/: registry.py  versioning.py
autogen_toolsmith/tools/: __init__.py
autogen_toolsmith/tools/base/: tool_base.py
autogen_toolsmith/tools/catalog/utility_tools/: __init__.py
docs/: custom_output.md  project_vision.md
docs/tools/: text_processor.md
examples/: .env.example  basic_usage.py  custom_output_dir_example.py  enumerate_tools_example.py  list_tools_example.py  tool_dependencies_example.py
tests/tools/utility_tools/: __init__.py  test_text_analyzer.py  test_text_formatter.py  test_text_processor.py
